crates/chatters-lib/src/snapshots/chatters_lib__keybinds__tests__parse_key_event-2.snap
---
source: crates/chatters-lib/src/keybinds.rs
expression: "KeyEvent::from_str(\"<c-a>\")"
---
Ok(
    KeyEvent {
        code: Char(
            'a',
        ),
        modifiers: KeyModifiers(
            CONTROL,
        ),
    },
)
