crates/chatters-lib/src/snapshots/chatters_lib__keybinds__tests__parse_key_event-3.snap
---
source: crates/chatters-lib/src/keybinds.rs
expression: "KeyEvent::from_str(\"<s-c-a>\")"
---
Ok(
    KeyEvent {
        code: Char(
            'a',
        ),
        modifiers: KeyModifiers(
            SHIFT | CONTROL,
        ),
    },
)
