crates/chatters-lib/src/snapshots/chatters_lib__keybinds__tests__parse_key_event-4.snap
---
source: crates/chatters-lib/src/keybinds.rs
expression: "KeyEvent::from_str(\"<esc>\")"
---
Ok(
    KeyEvent {
        code: Esc,
        modifiers: KeyModifiers(
            0x0,
        ),
    },
)
