crates/chatters-lib/src/snapshots/chatters_lib__keybinds__tests__parse_key_events.snap
---
source: crates/chatters-lib/src/keybinds.rs
expression: "KeyEvents::from_str(\"a<enter><c-esc>\")"
---
Ok(
    KeyEvents(
        [
            KeyEvent {
                code: Char(
                    'a',
                ),
                modifiers: KeyModifiers(
                    0x0,
                ),
            },
            KeyEvent {
                code: Enter,
                modifiers: KeyModifiers(
                    0x0,
                ),
            },
            KeyEvent {
                code: Esc,
                modifiers: KeyModifiers(
                    CONTROL,
                ),
            },
        ],
    ),
)
